force-app/main/default/objects/CSA_Option__c/CSA_Option__c.object-meta.xml
<CustomObject>
    <label>Option</label>
    <nameField>
        <label>Option Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Options</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>