force-app/main/default/objects/CSA_Option__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <label>Criteria</label>
    <referenceTo>CSA_Criteria__c</referenceTo>
    <relationshipLabel>Options</relationshipLabel>
    <relationshipName>Options</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>