force-app/main/default/objects/CSA_Option__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>Score</label>
    <precision>6</precision>
    <required>true</required>
    <scale>4</scale>
    <type>Number</type>
</CustomField>