force-app/main/default/objects/CSA_Option__c/fields/Style__c.field-meta.xml
<CustomField>
    <fullName>Style__c</fullName>
    <label>Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Option_priority</valueSetName>
    </valueSet>
</CustomField>